# clack

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: releasing.md
src/clack/: __init__.py  __main__.py  annotations.py  app.py  db.py  html_export.py  models.py  tmux.py
src/clack/css/: app.tcss
src/clack/widgets/: annotation_modal.py  dashboard.py  dialog_viewer.py  query_console.py  stats.py
