[project]
name = "clack"
version = "0.1.0"
description = "TUI for browsing, searching, and resuming Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "duckdb>=1.1.0",
    "libtmux>=0.40.0",
    "jinja2>=3.1.0",
]

[project.scripts]
clack = "clack.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clack"]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
root = "src"
